--- a/qs-springcloud-eureka-client-user-service/src/main/resources/application.yml
+++ b/qs-springcloud-eureka-client-user-service/src/main/resources/application.yml
@@ -16,3 +16,7 @@ eureka:
     # 自定义元数据Map Key value 随便填
     metadata-map:
       my-metadata: 我自定义的元数据
+    # 该配置指示eureka客户端需要向eureka服务器发送心跳的频率  (Spring Cloud默认该配置是 30s)
+    lease-renewal-interval-in-seconds: 10
+    # 该配置指示eureka服务器在接收到最后一个心跳之后等待的时间，然后才能从列表中删除此实例 (Spring Cloud默认该配置是 90s)
+    lease-expiration-duration-in-seconds: 30
