--- a/qs-springcloud-example-utils-service/pom.xml
+++ b/qs-springcloud-example-utils-service/pom.xml
@@ -11,5 +11,24 @@
 
     <artifactId>qs-springcloud-example-utils-service</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
+            <artifactId>qs-springcloud-base</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.qs.UtilsApplication</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
