--- a/qs-springcloud-eureka-server/src/main/resources/application-standalone.yml
+++ b/qs-springcloud-eureka-server/src/main/resources/application-standalone.yml
@@ -14,7 +14,7 @@ eureka:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
   server:
     # 该配置可以移除这种自我保护机制，防止失效的服务也被一直访问
-    enable-self-preservation: false
+    enable-self-preservation: true
     # 该配置可以修改检查失效服务的时间，每隔10s检查失效服务，并移除列表
     eviction-interval-timer-in-ms: 10000
 security:
