--- a/qs-springcloud-eureka-server/pom.xml
+++ b/qs-springcloud-eureka-server/pom.xml
@@ -38,6 +38,8 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <mainClass>com.qs.EurekaServerApplication</mainClass>
+                    <fork>true</fork>
+                    <jvmArguments>-Dfile.encoding=UTF-8</jvmArguments>
                 </configuration>
             </plugin>
         </plugins>
