--- a/qs-springcloud-example-utils-service/pom.xml
+++ b/qs-springcloud-example-utils-service/pom.xml
@@ -26,6 +26,8 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <mainClass>com.qs.UtilsApplication</mainClass>
+                    <fork>true</fork>
+                    <jvmArguments>-Dfile.encoding=UTF-8</jvmArguments>
                 </configuration>
             </plugin>
         </plugins>
