--- a/qs-springcloud-eureka-client-user-service/pom.xml
+++ b/qs-springcloud-eureka-client-user-service/pom.xml
@@ -42,6 +42,8 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <mainClass>com.qs.UserApplication</mainClass>
+                    <fork>true</fork>
+                    <jvmArguments>-Dfile.encoding=UTF-8</jvmArguments>
                 </configuration>
             </plugin>
         </plugins>
